# repl-ai

./: .pre-commit-config.yaml  CLAUDE.md  auth.py  claude-repl  example.txt  pyproject.toml  repl.py  rlm.py  system-architecture.md
docs/plans/: 2026-01-31-langgraph-reflection-design.md  2026-01-31-langgraph-reflection-impl.md  2026-02-01-input-mode-toggle-design.md  2026-02-01-streaming-consolidation-design.md  2026-02-01-streaming-consolidation.md  2026-02-01-textual-refactor-design.md  2026-02-01-textual-refactor-impl.md  2026-02-01-xml-io-integration.md  2026-02-01-xml-io-protocol-design.md  2026-02-01-xml-io-protocol-impl.md
lint/: no_pointless_imports.py
mahtab/: __init__.py  __main__.py  app.py  session.py  store.py
mahtab/.claude/: settings.json
mahtab/.claude/skills/: repl-tools.md  writing-python.md
mahtab/agent/: __init__.py  graph.py  repl_agent.py  state.py
mahtab/core/: __init__.py  executor.py  namespace.py  state.py
mahtab/io/: __init__.py  filters.py  formatters.py  handlers.py  parser.py  setup.py  store.py  tags.py
mahtab/llm/: __init__.py  claude_cli.py  prompts.py
mahtab/repl/: __init__.py  interactive.py  modal.py
mahtab/rlm/: __init__.py  search.py
mahtab/tools/: __init__.py  files.py  skills.py  text.py
mahtab/ui/: __init__.py  buffer_parser.py  code_panel.py  console.py  handlers.py  markdown_panel.py  panels.py  repl_widget.py  streaming.py  xml_panel.py
scripts/: radon_hal_check.py
tests/: conftest.py  test_app.py  test_claude_cli_callback.py  test_graph.py  test_graph_integration.py  test_graph_nodes.py  test_graph_routing.py  test_graph_types.py  test_handlers.py  test_interactive.py  test_io_filters.py  test_io_formatters.py  test_io_handlers.py  test_io_parser.py  test_io_setup.py  test_io_store.py  test_io_tags.py  test_prompts.py  test_repl_agent.py  test_repl_widget.py  test_session.py  test_store.py  test_streaming_callback.py  test_streaming_xml.py
