[project]
name = "mahtab"
version = "0.2.0"
description = "AI-powered shared Python REPL with Claude integration"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
mahtab = "mahtab.repl.interactive:run_repl"

[dependency-groups]
dev = ["ruff", "pre-commit", "pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (needed for some patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["mahtab"]
